Fix: double scroll bar in safe apps

--- a/src/components/safe-apps/AppFrame/styles.module.css
+++ b/src/components/safe-apps/AppFrame/styles.module.css
@@ -4,6 +4,7 @@
 }
 
 .iframe {
+  display: block;
   height: 100%;
   width: 100%;
   overflow: auto;
